# video_stabilizer

./: .gitignore  README.md  cli_run_stabiliser.py  pyproject.toml  vid_stabilizer_v2.py
helpers/: helpers.py
rendering_ui/: display.py
trackers/: trackers.py
video/: render_video.py
video_metadata/: video_metadata.py
video_stabilizer/: stabilizer_app.py
video_stabilizer/app/: stabilizer_app.py
video_stabilizer/cv2_utils/: utils.py
video_stabilizer/helpers/: helpers.py
video_stabilizer/rendering_ui/: display.py
video_stabilizer/trackers/: trackers.py
video_stabilizer/video/: render_video.py  video_metadata.py
