[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "video_stabilizer"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["video_stabilizer*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "D"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
ignore_missing_imports = true
